language/tests/regent/compile_fail/invalid_address_of.rg
-- Copyright 2024 Stanford University
--
-- Licensed under the Apache License, Version 2.0 (the "License");
-- you may not use this file except in compliance with the License.
-- You may obtain a copy of the License at
--
--     http://www.apache.org/licenses/LICENSE-2.0
--
-- Unless required by applicable law or agreed to in writing, software
-- distributed under the License is distributed on an "AS IS" BASIS,
-- WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-- See the License for the specific language governing permissions and
-- limitations under the License.

-- fails-with:
-- invalid_address_of.rg:29: attempting to take address of a field of an element in a region
--   var p = &r[0].a
--           ^

import "regent"

fspace st
{
  a : double;
  b : double;
}

task f(r : region(ispace(int1d), st))
  var p = &r[0].a
end
